--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 =======================================================================
-                Net::LDAPapi Module v1.40 for Perl5
+                Net::LDAPapi Module v1.42 for Perl5
                   Clayton Donley, <donley@wwa.com>
 =======================================================================
 
@@ -16,7 +16,7 @@ INTRODUCTION
 
 This module acts as a Perl5 interface to the LDAP C Development Kits from
 University of Michigan and Netscape.  The module itself is written completely
-in C. Full documentation is included, as are commented example scripts. 
+in C.  Full documentation is included, as are commented example scripts. 
 
 REQUIREMENTS
 ============
@@ -58,8 +58,8 @@ object oriented access into the API.  All of the original commands are
 unchanged, but are no longer documented.  You are encouraged to use the
 new OO style routines, which are documented in the man-page.
 
-Named arguments are not yet supported, but will definately be added by
-the time I release the next version.
+Version 1.42 and above support passing named arguments to all methods.
+
 
 UNIX INSTALLATION
 =================
@@ -169,6 +169,9 @@ examples are:
          to get it to do exactly what you want, but it exists as an idea
          as to how you can do this.
 
+      o ldap_mod_attr.pl - Matches a filter or UID and makes specified changes
+         to each entry.  Contributed by Andrew J Cosgriff.
+
    In addition, the test.pl program in the top level directory shows some
 of the basic synchronous search functionality.
 
@@ -176,61 +179,12 @@ of the basic synchronous search functionality.
 LDAP C API SUPPORT
 ==================
 
-   The following is a list of LDAP API calls supported by this API.  You can
-find more information on each one in the man page generated when you make
-the module.
+   This module supports direct perl access to all C API calls with the
+exception of filter generation calls (since you can do this better in Perl
+anyway).
 
-   While direct access to these calls is still available, it is suggested
-that you use the Perl-OO style interface if you have never used the C API.
-
-   Calls marked with (*) are only available using the Netscape SDK.
-
-		ldap_abandon
-		ldap_add
-		ldap_add_s
-		ldap_bind
-		ldap_bind_s
-		ldap_compare
-		ldap_compare_s
-		ldap_count_entries
-		ldap_delete
-		ldap_delete_s
-		ldap_dn2ufn
-		ldap_err2string
-		ldap_explode_dn (*)
-		ldap_explode_rdn (*)
-		ldap_explode_dns (*)
-		ldap_first_attribute
-		ldap_first_entry
-		ldap_get_dn
-		ldap_msgid
-		ldap_get_lderrno
-		ldap_get_option
-		ldap_get_values
-		ldap_get_values_len
-		ldap_init (*)
-		ldap_msgfree (*)
-		ldap_modify
-		ldap_modify_s
-		ldap_modrdn2
-		ldap_modrdn2_s
-		ldap_next_attribute
-		ldap_next_entry
-		ldap_open
-		ldap_perror
-		ldap_result
-		ldap_result2error
-		ldap_search
-		ldap_search_s
-		ldap_search_st
-		ldap_set_option
-		ldap_set_rebind_proc
-		ldap_simple_bind
-		ldap_simple_bind_s
-		ldap_unbind
-		ldapssl_client_init (*)
-		ldapssl_init (*)
-		ldapssl_install_routines (*)
+   While direct access is available, it is suggested that you use the
+Perl-OO style interface if you have never used the C API.
 
 
 FEEDBACK
@@ -241,15 +195,12 @@ package.  If you've got other good examples or such, please send them my
 way and I'll include them.  I also read comp.lang.perl.*, so any problems
 or bugs, you might want to report there as well, in case others have them.
 
+
 BUGS
 ====
 
 The non-OO stuff should work well.  Please let me know if I've introduced
-any bugs in the OO stuff or the cahnged examples.  I've used these routines
-in all my examples and they seem to work.
-
-Please let me know your Operating System, Perl Version, and LDAP API version
-when reporting any bugs.
+any bugs in the OO stuff or the cahnged examples.
 
 --
 Clayton Donley
