Import of MISHIKAL/Net-LDAPapi-2.00 from CPAN.
gitpan-cpan-distribution: Net-LDAPapi
gitpan-cpan-version:      2.00
gitpan-cpan-path:         MISHIKAL/Net-LDAPapi-2.00.tar.gz
gitpan-cpan-author:       MISHIKAL
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,15 @@
 Revision history for Perl5 Net::LDAPapi Module.
 
+2.00  Tue Feb 06 18:46:38 PST 2007
+	- Stripped out ISODE, UMich bits
+	- Updated to refer to Mozilla C SDK
+1.43  Sat Jun 13 02:39:15 CDT 1998
+	- Added replacement for strcasecmp that was more portable
+	- Fixed a few memory leaks caused by changes in 1.42 and
+	  tested these changes on both Netscape and UMICH SDKs.
+	- Changed the test.pl to be more intuitive and no longer require
+	  modifications.
+	- Made a few cosmetic changes to Makefile.PL
 1.42  Sat Apr 25 22:27:22 CDT 1998
 	- Added named arguments to all methods
 	- Got rid of a few old ber_free's that were causing problems
