--- a/README
+++ b/README
@@ -1,11 +1,15 @@
 =======================================================================
-                Net::LDAPapi Module v1.42 for Perl5
-                  Clayton Donley, <donley@wwa.com>
+                Net::LDAPapi Module v2.00 for Perl5
+		by Quanah Gibson-Mount @ Stanford University
+	based on version 1.50 by Howard Chu @ Symas Corporation
+	based on version 1.43 by Clayton Donley, <donley@wwa.com>
 =======================================================================
 
 COPYRIGHT
 =========
 
+   Copyright (c) 2007 Quanah Gibson-Mount. All rights reserved
+   Copyright (c) 2003 Howard Chu. All rights reserved.
    Copyright (c) 1998 Clayton Donley. All rights reserved.
    This program is free software; you can redistribute it and/or
    modify it under the same terms as Perl itself.
@@ -15,33 +19,31 @@ INTRODUCTION
 ============
 
 This module acts as a Perl5 interface to the LDAP C Development Kits from
-University of Michigan and Netscape.  The module itself is written completely
+OpenLDAP and Mozilla.  The module itself is written completely
 in C.  Full documentation is included, as are commented example scripts. 
+The current version supports the LDAPv3 API as implemented in OpenLDAP.
 
 REQUIREMENTS
 ============
 
 This module requires Perl5, a C compiler, and the LDAP libraries and include
-files from either of the following: 
+files from one of the following: 
 
-Netscape LDAP C SDK (used by author): 
-    http://developer.netscape.com/one/directory/downloads.html 
-University of Michigan LDAP-3.3: 
-    ftp://terminator.rs.itd.umich.edu/ldap/ldap-3.3.tar.Z 
-
-It should also works with the ISODE libraries and includes.
+OpenLDAP C SDK (support added by Symas):
+    http://www.openldap.org
+Mozilla LDAP C SDK
+    http://wiki.mozilla.org/LDAP_C_SDK
 
 A C Compiler is not required for the NT version if you download Perl5
-and module binaries and the Netscape SDK (you must copy the DLL into your
+and module binaries and the Mozilla SDK (you must copy the DLL into your
 system directory).
 
 
 PLATFORMS SUPPORTED
 ===================
 
-This version should be easily compiled on various platforms. It has be tested
-extensively under Solaris and verified to work under HPUX 10, AIX,
-BSD/OS, and Redhat Linux.
+This version should be easily compiled on various platforms. It has been tested
+extensively under Solaris and Linux.
 
 Additionally, as of 1.39, the module has been verified to work with NT 4.0
 and Perl 5.004+.
@@ -91,7 +93,7 @@ need to follow with other compilers.
    C:\> perl Makefile.PL
 
    Answer the questions appropriately.  Supply the path to PERL.EXE and the
-Netscape library and include files from their SDK.
+Mozilla library and include files from their SDK.
 
    C:\> nmake
 
@@ -120,7 +122,7 @@ NT BINARY INSTALLATION
 following URL:  http://www.perl.com/CPAN-local/authors/id/GSAR/.  Simply get
 one of the files starting with 'perl5.004'.
 
-   You will also need the Netscape LDAP SDK mentioned previously.  Copy the
+   You will also need the Mozilla LDAP SDK mentioned previously.  Copy the
 nsldap32v11.dll file from that archive into your system32 folder.
 
    Finally, unzip the archive into the C:\ directory if you installed
@@ -189,18 +191,13 @@ Perl-OO style interface if you have never used the C API.
 
 FEEDBACK
 ========
-
-I'm looking for any feedback regarding this package or how you use this
-package.  If you've got other good examples or such, please send them my
-way and I'll include them.  I also read comp.lang.perl.*, so any problems
-or bugs, you might want to report there as well, in case others have them.
-
+ Any feedback should be directed to mishikal@yahoo.com
 
 BUGS
 ====
 
 The non-OO stuff should work well.  Please let me know if I've introduced
-any bugs in the OO stuff or the cahnged examples.
+any bugs in the OO stuff or the changed examples.
 
 --
 Clayton Donley
@@ -208,3 +205,14 @@ Rolling Meadows, IL, USA
 email: donley@wwa.com
 web:   http://www.wwa.com/~donley
 CPAN:  /authors/id/CDONLEY
+
+Howard Chu
+Chief Architect, Symas Corporation	http://www.symas.com
+Core Team, OpenLDAP Project		http://www.openldap.org
+
+Quanah Gibson-Mount
+email: mishikal@yahoo.com
+CPAN: /authors/id/MISHIKAL
+Principal Software Developer
+Stanford University				http://www.stanford.edu
+Core Team, OpenLDAP Project		http://www.openldap.org
