Import of MISHIKAL/Net-LDAPapi-2.01 from CPAN.
gitpan-cpan-distribution: Net-LDAPapi
gitpan-cpan-version:      2.01
gitpan-cpan-path:         MISHIKAL/Net-LDAPapi-2.01.tar.gz
gitpan-cpan-author:       MISHIKAL
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl5 Net::LDAPapi Module.
 
+2.01  Fri Feb 09 08:41:46 PST 2007
+    - Fix library linking
 2.00  Tue Feb 06 18:46:38 PST 2007
 	- Stripped out ISODE, UMich bits
 	- Updated to refer to Mozilla C SDK
