Import of MISHIKAL/Net-LDAPapi-3.0.2 from CPAN.
gitpan-cpan-distribution: Net-LDAPapi
gitpan-cpan-version:      3.0.2
gitpan-cpan-path:         MISHIKAL/Net-LDAPapi-3.0.2.tar.gz
gitpan-cpan-author:       MISHIKAL
gitpan-cpan-maturity:     released

--- a/Todo
+++ b/Todo
@@ -5,6 +5,9 @@
 #   Date:  Thu Jul 12 12:27:19 PST 2007     #
 #############################################
 
+Platforms:
+- Test on windows
+
 LDAPv3 API Support:
 - Test against Mozilla C SDK
 
